# ODPlatform

./: .gitignore  .odp-workspace  README.md  pyproject.toml
apps/desktop/: README.md  main.py
apps/platform/: pyproject.toml
apps/platform/configs/datasets/: .gitkeep  safety_helmet.yaml
apps/platform/configs/runtime/: .gitkeep  train.yaml
apps/platform/logging/: .gitkeep
apps/platform/src/odp_platform/: __init__.py
apps/platform/src/odp_platform/cli/: __init__.py  eval_model.py  predict_model.py  train_model.py  transform_data.py  validate_data.py
apps/platform/src/odp_platform/common/: __init__.py  config_log.py  constants.py  logging_utils.py  paths.py  string_utils.py  system_utils.py
apps/platform/src/odp_platform/data_pipeline/: __init__.py
apps/platform/src/odp_platform/data_pipeline/convert/converters/: __init__.py
apps/platform/src/odp_platform/data_pipeline/split/: materializer.py  splitter.py
apps/platform/src/odp_platform/data_pipeline/split/strategies/: __init__.py  random_split.py  stratified_split.py
apps/platform/src/odp_platform/data_validation/: __init__.py  registry.py  render.py  report.py  service.py  snapshot.py
apps/platform/src/odp_platform/data_validation/checks/: label_format.py  yaml_schema.py
apps/platform/src/odp_platform/evaluation/: __init__.py
apps/platform/src/odp_platform/frame_source/: __init__.py  factory.py
apps/platform/src/odp_platform/frame_source/core/: base.py  config.py  types.py
apps/platform/src/odp_platform/frame_source/sources/: camera.py
apps/platform/src/odp_platform/inference/: __init__.py  service.py  sinks.py
apps/platform/src/odp_platform/runtime_config/: __init__.py  infer_config.py  loader.py
apps/platform/src/odp_platform/training/: __init__.py
apps/platform/src/odp_platform/visualization/: __init__.py  visualizer.py
apps/platform/tests/: test_convert.py  test_e2e_smoke.py  test_frame_source.py  test_logging.py  test_paths.py  test_string_utils.py
apps/web-backend/: server.py
deliverables/第5组_工业安全帽佩戴检测/01.项目源码/: .gitignore  .odp-workspace  CONTRIBUTING.md  IMPROVEMENT_REPORT.md  README.md  pyproject.toml
deliverables/第5组_工业安全帽佩戴检测/01.项目源码/.github/: PULL_REQUEST_TEMPLATE.md
deliverables/第5组_工业安全帽佩戴检测/01.项目源码/apps/desktop/: main.py
deliverables/第5组_工业安全帽佩戴检测/01.项目源码/apps/platform/: README.md
deliverables/第5组_工业安全帽佩戴检测/03.项目文件/: 人员分工表_第5组_工业安全帽佩戴检测.xlsx  概要设计书_第5组_工业安全帽佩戴检测.docx  结合测试_第5组_工业安全帽佩戴检测.xlsx
deliverables/第5组_工业安全帽佩戴检测/04.实训总结报告-每人1份/: 刘睿煊_22009201263_学生实训总结报告.docx  王智鹏_23009200551_学生实训总结报告.docx  陈瀚鹏_23009201360_学生实训总结报告.docx  高文焱_23009201178_学生实训总结报告.docx  高晨曦_23009290073_学生实训总结报告.docx
docs/architecture/: README.md
models/checkpoints/: README.md
scripts/: gen_docs.py  wrap_trt_engine.py
scripts/ci/: check_deps.sh
tensorrt/: README.md
training_logs/: odp_audit.json
(+51 files in other folders)
